--- a/sites/all/modules/custom/gbifs/npt_setup/css/npt-setup.css
+++ b/sites/all/modules/custom/gbifs/npt_setup/css/npt-setup.css
@@ -1,45 +1,50 @@
 @CHARSET "UTF-8";
 
-.block-gbif-nptstartupsetup .setup-complete{
+.block-npt-setup .setup-complete{
   border: 1px solid #D4D4D4;
   padding: 1px;
   margin-bottom: 5px;
 }
 
-.block-gbif-nptstartupsetup .zero-complete{
+.block-npt-setup .zero-complete{
   background: #BB1023;
 }
 
-.block-gbif-nptstartupsetup .half-complete{
+.block-npt-setup .half-complete{
   background: #FCAD00;
 }
 
-.block-gbif-nptstartupsetup .complete{
+.block-npt-setup .complete{
   background: #94C821;
 }
 
-.block-gbif-nptstartupsetup p{
+.block-npt-setup p{
   float: left;
   width: 100px;
 }
 
-.block-gbif-nptstartupsetupT a{
+.block-npt-setupT a{
   text-align: right;
   display: block;
 }
 
-.gbif-nptstartupsetup-welcome-text {
-  width: 720px;
+.wizard-trail-current {
+  color: black;
 }
 
-#gbif-nptstartupsetup-welcome-form h3 {
+/*
+.npt-setup-welcome-text {
+  max-width: 720px;
+}
+
+#npt-setup-welcome-form h3 {
   margin-bottom: 10px;
 }
-#gbif-nptstartupsetup-welcome-form p {
+#npt-setup-welcome-form p {
   margin-bottom: 10px;
 }
 
-#gbif-nptstartupsetup-front-form label {
+#npt-setup-front-form label {
   font-size: 1.1em;
   margin-bottom: 5px;
 }
@@ -70,3 +75,4 @@ div.text-format-wrapper div.description {
 .fieldset-content.fieldset-wrapper.clearfix {
   background: none;
 }
+*/
