--- a/sites/all/themes/gbifwhite2012/css/global.css
+++ b/sites/all/themes/gbifwhite2012/css/global.css
@@ -517,7 +517,7 @@ section #block-gbif-spdsht-available-templates {
 
 #region-postscript-first div.item-list li { white-space: normal; text-indent: -5px; margin-left: 5px; margin-bottom: 8px; line-height: 1.1em;}
 #region-postscript-second div.item-list li { white-space: normal; text-indent: -5px; margin-left: 5px; margin-bottom: 8px; line-height: 1.1em;}
-#region-postscript-third div.item-list li { white-space: normal; text-indent: -5px; margin-left: 5px;}
+#region-postscript-third div.item-list li { white-space: normal; text-indent: -5px; margin-left: 5px; margin-bottom: 8px; line-height: 1.1em;}
 
 .more-link {
   float: left;
@@ -605,9 +605,6 @@ section #block-gbif-spdsht-available-templates {
 .block-title { color: #444; }
 
 #block-creative-commons-creative-commons {
-  max-width: 480px;
-  margin: 0 auto;
-  font-size: 0.95em;
   border-top: 1px solid;
   border-color: rgba(255, 255, 255, 0.15);
   padding-top: 10px;
@@ -623,6 +620,7 @@ section #block-gbif-spdsht-available-templates {
 }
 #block-npt-blocks-credit-orgs div.item-list ul li {
   display: inline;
+  margin: 0 30px 0 30px;
 }
 h3#modal-title {
   font-family: DINOT-Regular;
