Now publication list is included.

--- a/sites/all/themes/gbifwhite2012/css/global.css
+++ b/sites/all/themes/gbifwhite2012/css/global.css
@@ -665,3 +665,6 @@ div.modal-forms-modal-content .form-item label {
 #chart {
   float: right;
 }
+
+.mendeley-citation { padding-left: 40px; }
+.mendeley-citation li { margin-bottom: 8px; }
