--- a/sites/all/themes/gbifwhite2012/css/global.css
+++ b/sites/all/themes/gbifwhite2012/css/global.css
@@ -665,6 +665,7 @@ div.modal-forms-modal-content .form-item label {
 #chart {
   float: right;
 }
-
+.organisation-list { padding-left: 40px; }
+.organisation-list li { margin-bottom: 8px; }
 .mendeley-citation { padding-left: 40px; }
 .mendeley-citation li { margin-bottom: 8px; }
