--- a/sites/all/themes/scratchpads/css/sites.css
+++ b/sites/all/themes/scratchpads/css/sites.css
@@ -1,11 +1,11 @@
 @CHARSET "UTF-8";
 
 .site-s2.sciaroidea.info #zone-header,
-site-sciaroidea.info #zone-header{
+.site-sciaroidea.info #zone-header{
   padding-top: 0!important;
 }
 
 .site-s2.sciaroidea.info #zone-header .section-header #region-menu,
-site-sciaroidea.info #zone-header .section-header #region-menu{
+.site-sciaroidea.info #zone-header .section-header #region-menu{
   margin-top: 0!important;
 }
