--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -193,6 +193,10 @@ table th a img{
   text-align: right;
 }
 
+#zone-slide-top-wrapper .scratchpads-slide-toggle-body {
+  display: none;
+}
+
 #zone-slide-top-wrapper form#user-login-form{
   padding: 20px 0 30px 0;
 }
@@ -266,6 +270,9 @@ a.scratchpads-slide-toggle{
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
 }  
+body.multilingual #zone-slide-top-wrapper a.scratchpads-slide-toggle{
+  right: 80px;
+}
 
 #zone-slide-bottom-wrapper a.scratchpads-slide-toggle{
   top: -20px;
@@ -278,6 +285,29 @@ a.scratchpads-slide-toggle{
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   line-height: 14px;
+}
+
+body.multilingual #zone-slide-top-wrapper #block-scratchpads-multilingual-language-switcher a.scratchpads-slide-toggle{
+  right: 0;
+}
+
+#zone-slide-top-wrapper #block-scratchpads-multilingual-language-switcher ul {
+  list-style: none;
+  list-style-image: none;
+  float: right;
+  margin-top: 8px;
+}
+
+#zone-slide-top-wrapper #block-scratchpads-multilingual-language-switcher li {
+  list-style: none;
+  list-style-image: none;
+  float: left;
+  margin-right: 12px;
+}
+
+#zone-slide-top-wrapper #block-scratchpads-multilingual-language-switcher a.session-active{
+  text-decoration: none;
+  font-weight: bold;
 }
 
 
@@ -293,6 +323,9 @@ a.scratchpads-slide-toggle{
   right: 70px;
   top: 0;
   text-align: right;
+}
+body.multilingual #region-secondary-menu {
+  right: 150px;
 }
 
 .logged-in #region-secondary-menu{
