--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -854,7 +854,10 @@ div.contextual-links-wrapper ul.contextual-links{
    z-index:2!important;
 }
 
-
+#cboxLoadedContent .contextual-links-wrapper{
+  right:26px;
+  top:15px;
+}
 
 /****************** CONTACT FORMS *****************/
 
