Display a user's picture as a small 20x20px image.

--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -593,6 +593,10 @@ h2.site-name {
   text-align: right;
 }
 
+.node .submitted .user-picture{
+  display:inline;
+}
+
 /* STRIPY DIV GROUPS */
 
 .node .stripy-div-group{
