Fix issue #180 by adding some CSS to the admin theme

--- a/sites/all/themes/scratchpads_admin/override.css
+++ b/sites/all/themes/scratchpads_admin/override.css
@@ -292,3 +292,8 @@ form div.entityconnect-edit input:hover {
 #tui-form-container div.entityconnect-add {
   display: none;
 }
+
+/* Relation select entries */
+.rs-wrapper, .rs-placeholder {
+  width: 500px;
+}
