Modified the creative commons footer text to fit GBIF Data Sharing Agreement.

--- a/sites/all/modules/custom/creative_commons/css/creative_commons.css
+++ b/sites/all/modules/custom/creative_commons/css/creative_commons.css
@@ -1,6 +1,6 @@
 @CHARSET "UTF-8";
 
-#block-creative-commons-creative-commons a{
+#block-creative-commons-creative-commons a img {
   float: left;
 }
 
