--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -566,7 +566,8 @@ h2.site-name {
 }
 
 .view-species-media .view-content ul li.views-row,
-.page-gallery .file{	
+.page-gallery .file,
+.lexicon-list .file{	
   float: left;
   margin: 0 10px 10px 0;
   border: 1px solid #999;
