Make the link to add a comment bold.

--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -937,6 +937,9 @@ width: 300px;
 }
 
 /****************** Comments *****************/
+li.comment-add{
+  font-weight:700;
+}
 #comments h2{
   background: transparent!important;
   color: #3E3E3E;
