--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -546,7 +546,7 @@ h2.site-name {
   position: relative;
   top: -30px;
 }
-.block-species-biblio-block{
+.block-species-biblio-block, .block-species-spm-block{
   float:none !important;
 }
 
