Work on the themeing of pensoft publications (#2130), add a title to tables (#2160), limit available relations for treatments (#2112), update the relation fields (#2162) - commit feature (#2044). All this follows on feedback (#2043)

--- a/sites/all/modules/custom/publication/css/publication.css
+++ b/sites/all/modules/custom/publication/css/publication.css
@@ -85,6 +85,7 @@
 }
 
 .publication-group .field-type-relation-select ul li .field-label,
+.publication-group .field-type-relation-select .relation-select-field-prefix > .field .field-label,
 .publication-group .field-type-relation-select .relation-select-field-suffix .field-label {
   float: left;
   margin-left: 20px;
@@ -92,6 +93,7 @@
 }
 
 .publication-group .field-type-relation-select ul li .field-items,
+.publication-group .field-type-relation-select .relation-select-field-prefix > .field .field-items,
 .publication-group .field-type-relation-select .relation-select-field-suffix .field-items {
   margin-left: 40px;
 }
@@ -126,4 +128,8 @@
 
 .publication-group .publication_figure div {
   margin-left: 230px;
+}
+
+.publication-group .field-collection-view .field-label {
+  width: auto;
 }
