Add classes for floating images embeded in node bodies right or left. This is mostly intended for migrated sites that had floated images. #2271

--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -769,6 +769,14 @@ table.biblio td{
   float: left;
 }
 
+/* Embeded floated images ; for imported sites */
+#region-content div.field-name-body img.embeded_image_float_right {
+  float: right;
+}
+#region-content div.field-name-body img.embeded_image_float_left {
+  float: left;
+}
+
 /****************** BLOG ****************/
 .view-blog-page .views-row-odd,
 .view-blog-page .views-row-even{
