Fixes #201. Display a &copy; © symbol along with the Creator field.

--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -863,6 +863,10 @@ article.node-event div.field-name-field-event-date {
   max-width: 500px!important;
 }
 
+.field.field-name-field-creator .field-items .field-item:before{
+  content:'\a9  ';
+}
+
 /****************** SLICKGRID *****************/
   
 .bt-wrapper h2{
